# exodus

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/etl/: extractor.py  generator.py  parser.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ProgressFeed.tsx  ResultsView.tsx  UploadZone.tsx
