[project]
name = "exodus-backend"
version = "1.0.0"
description = "FastAPI backend for ChatGPT → Claude migration ETL"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "anthropic==0.40.0",
    "python-multipart==0.0.20",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["etl*"]

[tool.setuptools]
py-modules = ["main"]
